// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectAdminProposals utils functions should get a correctly formatted categories choices for a given project 1`] = `
Array [
  Object {
    "id": "pCategory1",
    "name": "Aménagement",
  },
  Object {
    "id": "pCategory2",
    "name": "Politique",
  },
]
`;

exports[`ProjectAdminProposals utils functions should get a correctly formatted districts choices for a given project 1`] = `
Array [
  Object {
    "id": "district1",
    "name": "Mon beau quartier",
  },
  Object {
    "id": "district2",
    "name": "Noisyzoo",
  },
]
`;

exports[`ProjectAdminProposals utils functions should get a correctly formatted step statuses choices for a given step 1`] = `
Array [
  Object {
    "color": "primary",
    "id": "status1",
    "name": "Approuvé",
  },
  Object {
    "color": "danger",
    "id": "status2",
    "name": "Rejeté",
  },
]
`;

exports[`ProjectAdminProposals utils functions should get a correctly formatted step statuses choices for a given step 2`] = `
Array [
  Object {
    "color": "primary",
    "id": "status1",
    "name": "En cours",
  },
  Object {
    "color": "success",
    "id": "status2",
    "name": "Sélectionnée",
  },
  Object {
    "color": "danger",
    "id": "status3",
    "name": "Un autre status",
  },
]
`;

exports[`ProjectAdminProposals utils functions should get a correctly formatted steps choices for a given project 1`] = `
Array [
  Object {
    "hasTheme": false,
    "id": "cstep1",
    "title": "Étape de dépôt",
    "type": "CollectStep",
  },
  Object {
    "hasTheme": false,
    "id": "sstep1",
    "title": "Étape de sélection",
    "type": "SelectionStep",
  },
]
`;
